k8s/30-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nemo-ui
  namespace: nemo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nemo-ui
  template:
    metadata:
      labels:
        app: nemo-ui
    spec:
      containers:
        - name: ui
          image: harbor.local:8088/nemo/nemo_ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nemo-ui
  namespace: nemo
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30086
  selector:
    app: nemo-ui
