k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nemo
  namespace: nemo
spec:
  rules:
    - host: nemo.example.com
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: nemo-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nemo-ui
                port:
                  number: 80
